C_GrammarParser.py
# Generated from C_Grammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class C_GrammarParser ( Parser ):

    grammarFileName = "C_Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'('", "','", "')'", "'['", 
                     "']'", "'{'", "'}'", "'++'", "'--'", "'!'", "'||'", 
                     "'&&'", "'*'", "'+'", "'-'", "'/'", "'%'", "'=='", 
                     "'>'", "'<'", "'<='", "'>='", "'void'", "'char'", "'char*'", 
                     "'short'", "'int'", "'long'", "'float'", "'double'", 
                     "'if'", "'else'", "'while'", "'for'", "'continue'", 
                     "'break'", "'return'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'''", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Number", "Identifier", "Char", "FloatNumber", "Apostrophe", 
                      "Quotes", "Whitespace" ]

    RULE_compilationUnit = 0
    RULE_externalDeclaration = 1
    RULE_declaration = 2
    RULE_variableDeclaration = 3
    RULE_functionDeclaration = 4
    RULE_assignmentExpression = 5
    RULE_variableAssignment = 6
    RULE_arrayAssignment = 7
    RULE_variableInitializer = 8
    RULE_arrayDeclaration = 9
    RULE_arrayProperies = 10
    RULE_arrayInitializer = 11
    RULE_expression = 12
    RULE_unaryExpression = 13
    RULE_unaryOperator = 14
    RULE_typeSpecifier = 15
    RULE_statement = 16
    RULE_compoundStatement = 17
    RULE_blockItem = 18
    RULE_ifStatement = 19
    RULE_iterationStatement = 20
    RULE_forCondition = 21
    RULE_forDeclaration = 22
    RULE_forExpression = 23
    RULE_jumpStatement = 24

    ruleNames =  [ "compilationUnit", "externalDeclaration", "declaration", 
                   "variableDeclaration", "functionDeclaration", "assignmentExpression", 
                   "variableAssignment", "arrayAssignment", "variableInitializer", 
                   "arrayDeclaration", "arrayProperies", "arrayInitializer", 
                   "expression", "unaryExpression", "unaryOperator", "typeSpecifier", 
                   "statement", "compoundStatement", "blockItem", "ifStatement", 
                   "iterationStatement", "forCondition", "forDeclaration", 
                   "forExpression", "jumpStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    Number=40
    Identifier=41
    Char=42
    FloatNumber=43
    Apostrophe=44
    Quotes=45
    Whitespace=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CompilationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(C_GrammarParser.EOF, 0)

        def externalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.ExternalDeclarationContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.ExternalDeclarationContext,i)


        def assignmentExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.AssignmentExpressionContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.AssignmentExpressionContext,i)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = C_GrammarParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << C_GrammarParser.T__9) | (1 << C_GrammarParser.T__10) | (1 << C_GrammarParser.T__11) | (1 << C_GrammarParser.T__24) | (1 << C_GrammarParser.T__25) | (1 << C_GrammarParser.T__26) | (1 << C_GrammarParser.T__27) | (1 << C_GrammarParser.T__28) | (1 << C_GrammarParser.T__29) | (1 << C_GrammarParser.T__30) | (1 << C_GrammarParser.T__31) | (1 << C_GrammarParser.Identifier))) != 0):
                self.state = 52
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [C_GrammarParser.T__24, C_GrammarParser.T__25, C_GrammarParser.T__26, C_GrammarParser.T__27, C_GrammarParser.T__28, C_GrammarParser.T__29, C_GrammarParser.T__30, C_GrammarParser.T__31]:
                    self.state = 50
                    self.externalDeclaration()
                    pass
                elif token in [C_GrammarParser.T__9, C_GrammarParser.T__10, C_GrammarParser.T__11, C_GrammarParser.Identifier]:
                    self.state = 51
                    self.assignmentExpression()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(C_GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExternalDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(C_GrammarParser.DeclarationContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_externalDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternalDeclaration" ):
                listener.enterExternalDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternalDeclaration" ):
                listener.exitExternalDeclaration(self)




    def externalDeclaration(self):

        localctx = C_GrammarParser.ExternalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_externalDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.declaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(C_GrammarParser.VariableDeclarationContext,0)


        def arrayDeclaration(self):
            return self.getTypedRuleContext(C_GrammarParser.ArrayDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(C_GrammarParser.FunctionDeclarationContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = C_GrammarParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.arrayDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.functionDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(C_GrammarParser.TypeSpecifierContext,0)


        def Identifier(self):
            return self.getToken(C_GrammarParser.Identifier, 0)

        def variableInitializer(self):
            return self.getTypedRuleContext(C_GrammarParser.VariableInitializerContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = C_GrammarParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.typeSpecifier()
            self.state = 67
            self.match(C_GrammarParser.Identifier)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==C_GrammarParser.T__0:
                self.state = 68
                self.match(C_GrammarParser.T__0)
                self.state = 69
                self.variableInitializer()


            self.state = 72
            self.match(C_GrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.TypeSpecifierContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.TypeSpecifierContext,i)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(C_GrammarParser.Identifier)
            else:
                return self.getToken(C_GrammarParser.Identifier, i)

        def statement(self):
            return self.getTypedRuleContext(C_GrammarParser.StatementContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = C_GrammarParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.typeSpecifier()
            self.state = 75
            self.match(C_GrammarParser.Identifier)
            self.state = 76
            self.match(C_GrammarParser.T__2)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << C_GrammarParser.T__24) | (1 << C_GrammarParser.T__25) | (1 << C_GrammarParser.T__26) | (1 << C_GrammarParser.T__27) | (1 << C_GrammarParser.T__28) | (1 << C_GrammarParser.T__29) | (1 << C_GrammarParser.T__30) | (1 << C_GrammarParser.T__31))) != 0):
                self.state = 77
                self.typeSpecifier()
                self.state = 78
                self.match(C_GrammarParser.Identifier)


            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==C_GrammarParser.T__3:
                self.state = 82
                self.match(C_GrammarParser.T__3)
                self.state = 83
                self.typeSpecifier()
                self.state = 84
                self.match(C_GrammarParser.Identifier)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(C_GrammarParser.T__4)
            self.state = 92
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableAssignment(self):
            return self.getTypedRuleContext(C_GrammarParser.VariableAssignmentContext,0)


        def arrayAssignment(self):
            return self.getTypedRuleContext(C_GrammarParser.ArrayAssignmentContext,0)


        def unaryExpression(self):
            return self.getTypedRuleContext(C_GrammarParser.UnaryExpressionContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_assignmentExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentExpression" ):
                listener.enterAssignmentExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentExpression" ):
                listener.exitAssignmentExpression(self)




    def assignmentExpression(self):

        localctx = C_GrammarParser.AssignmentExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignmentExpression)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.variableAssignment()
                self.state = 95
                self.match(C_GrammarParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.arrayAssignment()
                self.state = 98
                self.match(C_GrammarParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.unaryExpression()
                self.state = 101
                self.match(C_GrammarParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableAssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(C_GrammarParser.Identifier, 0)

        def variableInitializer(self):
            return self.getTypedRuleContext(C_GrammarParser.VariableInitializerContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_variableAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableAssignment" ):
                listener.enterVariableAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableAssignment" ):
                listener.exitVariableAssignment(self)




    def variableAssignment(self):

        localctx = C_GrammarParser.VariableAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(C_GrammarParser.Identifier)
            self.state = 106
            self.match(C_GrammarParser.T__0)
            self.state = 107
            self.variableInitializer()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayAssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(C_GrammarParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(C_GrammarParser.ExpressionContext,0)


        def variableInitializer(self):
            return self.getTypedRuleContext(C_GrammarParser.VariableInitializerContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_arrayAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAssignment" ):
                listener.enterArrayAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAssignment" ):
                listener.exitArrayAssignment(self)




    def arrayAssignment(self):

        localctx = C_GrammarParser.ArrayAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(C_GrammarParser.Identifier)
            self.state = 110
            self.match(C_GrammarParser.T__5)
            self.state = 111
            self.expression(0)
            self.state = 112
            self.match(C_GrammarParser.T__6)
            self.state = 113
            self.match(C_GrammarParser.T__0)
            self.state = 114
            self.variableInitializer()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableInitializerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(C_GrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_variableInitializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableInitializer" ):
                listener.enterVariableInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableInitializer" ):
                listener.exitVariableInitializer(self)




    def variableInitializer(self):

        localctx = C_GrammarParser.VariableInitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variableInitializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(C_GrammarParser.TypeSpecifierContext,0)


        def Identifier(self):
            return self.getToken(C_GrammarParser.Identifier, 0)

        def arrayInitializer(self):
            return self.getTypedRuleContext(C_GrammarParser.ArrayInitializerContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.ExpressionContext,i)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_arrayDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclaration" ):
                listener.enterArrayDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclaration" ):
                listener.exitArrayDeclaration(self)




    def arrayDeclaration(self):

        localctx = C_GrammarParser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.typeSpecifier()
            self.state = 119
            self.match(C_GrammarParser.Identifier)
            self.state = 125 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 120
                self.match(C_GrammarParser.T__5)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << C_GrammarParser.T__2) | (1 << C_GrammarParser.T__9) | (1 << C_GrammarParser.T__10) | (1 << C_GrammarParser.T__11) | (1 << C_GrammarParser.Number) | (1 << C_GrammarParser.Identifier) | (1 << C_GrammarParser.FloatNumber) | (1 << C_GrammarParser.Apostrophe) | (1 << C_GrammarParser.Quotes))) != 0):
                    self.state = 121
                    self.expression(0)


                self.state = 124
                self.match(C_GrammarParser.T__6)
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==C_GrammarParser.T__5):
                    break

            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==C_GrammarParser.T__0:
                self.state = 129
                self.match(C_GrammarParser.T__0)
                self.state = 130
                self.arrayInitializer()


            self.state = 133
            self.match(C_GrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayProperiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(C_GrammarParser.Identifier, 0)

        def Number(self):
            return self.getToken(C_GrammarParser.Number, 0)

        def getRuleIndex(self):
            return C_GrammarParser.RULE_arrayProperies

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayProperies" ):
                listener.enterArrayProperies(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayProperies" ):
                listener.exitArrayProperies(self)




    def arrayProperies(self):

        localctx = C_GrammarParser.ArrayProperiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayProperies)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            _la = self._input.LA(1)
            if not(_la==C_GrammarParser.Number or _la==C_GrammarParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayInitializerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.ExpressionContext,i)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_arrayInitializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInitializer" ):
                listener.enterArrayInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInitializer" ):
                listener.exitArrayInitializer(self)




    def arrayInitializer(self):

        localctx = C_GrammarParser.ArrayInitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arrayInitializer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(C_GrammarParser.T__7)
            self.state = 138
            self.expression(0)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==C_GrammarParser.T__3:
                self.state = 139
                self.match(C_GrammarParser.T__3)
                self.state = 140
                self.expression(0)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.match(C_GrammarParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.ExpressionContext,i)


        def Number(self):
            return self.getToken(C_GrammarParser.Number, 0)

        def Identifier(self):
            return self.getToken(C_GrammarParser.Identifier, 0)

        def FloatNumber(self):
            return self.getToken(C_GrammarParser.FloatNumber, 0)

        def Apostrophe(self, i:int=None):
            if i is None:
                return self.getTokens(C_GrammarParser.Apostrophe)
            else:
                return self.getToken(C_GrammarParser.Apostrophe, i)

        def Char(self):
            return self.getToken(C_GrammarParser.Char, 0)

        def Quotes(self, i:int=None):
            if i is None:
                return self.getTokens(C_GrammarParser.Quotes)
            else:
                return self.getToken(C_GrammarParser.Quotes, i)

        def unaryExpression(self):
            return self.getTypedRuleContext(C_GrammarParser.UnaryExpressionContext,0)


        def unaryOperator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.UnaryOperatorContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.UnaryOperatorContext,i)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = C_GrammarParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 149
                self.match(C_GrammarParser.T__2)
                self.state = 150
                self.expression(0)
                self.state = 151
                self.match(C_GrammarParser.T__4)
                pass

            elif la_ == 2:
                self.state = 153
                self.match(C_GrammarParser.Number)
                pass

            elif la_ == 3:
                self.state = 154
                self.match(C_GrammarParser.Identifier)
                pass

            elif la_ == 4:
                self.state = 155
                self.match(C_GrammarParser.FloatNumber)
                pass

            elif la_ == 5:
                self.state = 156
                self.match(C_GrammarParser.Apostrophe)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << C_GrammarParser.Number) | (1 << C_GrammarParser.Identifier) | (1 << C_GrammarParser.Char))) != 0):
                    self.state = 157
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << C_GrammarParser.Number) | (1 << C_GrammarParser.Identifier) | (1 << C_GrammarParser.Char))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 160
                self.match(C_GrammarParser.Apostrophe)
                pass
